@startuml
abstract class Item.Weapon.Gun {
# long lastFiredTime
# long fireRate
# double targetX
- {static} java.util.Random RNG
+ <<Create>> Gun(String,int,int,long)
+ boolean isReady()
+ void startCooldown()
+ void use(Player)
+ {abstract}void shoot(Player)
# double[] applyRecoil(double,double)
+ void setMouseTarget(double,double)
}


class Item.Weapon.Pistol {
+ <<Create>> Pistol()
+ double getRecoilAmount()
+ void shoot(Player)
}

class Item.HealingItem.Medkit {
+ <<Create>> Medkit()
+ void Healing(Player)
}

abstract class Item.Item {
# String name
# int amount
# int x
# int width
# int height
+ <<Create>> Item(String,int)
+ void addAmount(int)
# void reduceAmount()
+ boolean isEmpty()
+ void onPickUp(Player)
+ {abstract}void use(Player)
+ {static} void playGunSound()
+ String getName()
+ void setName(String)
+ int getAmount()
+ void setAmount(int)
+ int getX()
+ int getY()
+ void setX(int)
+ void setY(int)
+ Rectangle getBounds()
}


class Item.Bullet.Bullet {
- float x
- double dx
- int speed
- int damage
- String ownerName
+ <<Create>> Bullet(int,int,double,double,int,int,String)
+ void update()
+ Rectangle getBounds()
+ int getX()
+ int getY()
+ int getDamage()
+ String getOwnerName()
}


abstract class Item.HealingItem.HealingItems {
+ <<Create>> HealingItems(String,int)
+ void use(Player)
+ {abstract}void Healing(Player)
}

class Item.Weapon.MachineGun {
+ <<Create>> MachineGun()
+ double getRecoilAmount()
+ void shoot(Player)
}

class Item.Weapon.Shotgun {
+ <<Create>> Shotgun()
+ double getRecoilAmount()
+ void shoot(Player)
}

abstract class Item.Weapon.Weapon {
# int damage
+ <<Create>> Weapon(String,int,int)
+ {abstract}double getRecoilAmount()
}


class Item.HealingItem.Bandage {
+ <<Create>> Bandage()
+ void Healing(Player)
}



Interface.Cooldownable <|.. Item.Weapon.Gun
Item.Weapon.Weapon <|-- Item.Weapon.Gun
Item.Weapon.Gun <|-- Item.Weapon.Pistol
Item.HealingItem.HealingItems <|-- Item.HealingItem.Medkit
Interface.Pickable <|.. Item.Item
Item.Item <|-- Item.HealingItem.HealingItems
Item.Weapon.Gun <|-- Item.Weapon.MachineGun
Item.Weapon.Gun <|-- Item.Weapon.Shotgun
Item.Item <|-- Item.Weapon.Weapon
Item.HealingItem.HealingItems <|-- Item.HealingItem.Bandage
@enduml